# USRP-B210-recorder

./: .gitignore  CMakeLists.txt  README-PL.md  README.md  build.sh
src/: CMakeLists.txt  FileOut.cpp  FileOut.h  RecorderMagister.cpp  RecorderMagister.h  SafeQueue.h  main.cpp
src/config/: Config.cpp  Config.h  ConfigException.h  RecorderConfig.cpp  RecorderConfig.h
src/config/ini/: simpleRecorder.ini
utu/: Logger.h  log.h  task_support.h
utu/details/: Color.h  formatters.h  sinks.h
